<resources>
    <string name="app_name">EceryWhere</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_more_service">你好,为了获取更好的服务</string>
    <string name="login_app">请登录楼舒旅行</string>
    <string name="contry_code">+86</string>
    <string name="input_phone">请输入手机号</string>
    <string name="send_verify">发送验证码</string>
    <string name="or">or</string>
    <string name="tv_wechat">微信登录</string>
    <string name="tv_qq">QQ登录</string>
    <string name="tv_sina">微博登录</string>
    <string name="send_again">重新发送(60s)</string>
    <string name="input_verify">请输入验证码</string>
    <string name="wait_please">请稍后...</string>
    <string name="agree_protocol">登录或注册即同意楼舒旅行用户协议</string>
    <string name="oauth_error">授权失败</string>
    <string name="oauth_cancel">取消授权</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="home">首页</string>
    <string name="app_rice">伴米</string>
</resources>
