<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.LoginFragment"
    android:background="@color/c_FFFFFF">
<ImageView
    android:id="@+id/iv_back"
    android:layout_width="@dimen/dp_25"
    android:layout_height="@dimen/dp_25"
    android:src="@mipmap/back_white"
    android:layout_marginTop="@dimen/dp_35"
    android:layout_marginLeft="@dimen/dp_20"/>
   <TextView
       android:layout_below="@id/iv_back"
       android:layout_width="@dimen/dp_201"
       android:layout_height="@dimen/dp_22"
       android:id="@+id/tv_hellow"
       android:layout_marginLeft="@dimen/dp_23"
       android:layout_marginTop="@dimen/dp_13"
       android:text="@string/for_more_service"
       android:textSize="@dimen/sp_16"
       android:textColor="@color/c_FA6A13"/>
    <TextView
        android:id="@+id/login"
        android:layout_below="@id/tv_hellow"
        android:layout_width="@dimen/dp_198"
        android:layout_height="@dimen/dp_38"
        android:text="@string/login_app"
        android:textSize="@dimen/dp_27"
        android:textColor="@color/c_373737"
        android:layout_marginTop="@dimen/dp_9"
        android:layout_marginLeft="@dimen/dp_23"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_container"
        android:layout_below="@id/login"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_106">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/phone"
           />
        <TextView
            android:id="@+id/tv_coutry_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:text="@string/contry_code"
            android:textColor="@color/c_636363"
            android:textSize="@dimen/sp_14"/>
        <ImageView
            android:layout_width="@dimen/dp_7"
            android:layout_height="@dimen/dp_5"
            android:src="@mipmap/select"
            android:layout_marginLeft="@dimen/dp_2" />
        <EditText
            android:layout_weight="1"
            android:id="@+id/et_phone"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone"
            android:background="@null"
            android:inputType="phone"
            android:textSize="@dimen/sp_16"
            android:textColorHint="@color/c_C8C8C8"
           />
        <Button
            android:id="@+id/btn_send_verify"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_30"
            android:textSize="@dimen/sp_14"
            android:text="@string/send_verify"
            android:textColor="@color/c_FEFEFE"
            android:background="@drawable/bg_btn_ea_r15"
          />


    </LinearLayout>

<View
    android:layout_width="@dimen/dp_329"
    android:layout_height="1dp"
    android:id="@+id/view"
    android:layout_below="@id/ll_container"
    android:layout_marginTop="@dimen/dp_5"
    android:background="@color/c_FA6A13"
    android:layout_marginLeft="@dimen/dp_23"
    android:layout_marginRight="@dimen/dp_23"
    />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginTop="@dimen/dp_141"
        android:id="@+id/ll_or"
        android:gravity="center_vertical">
        <View
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"
           android:background="@drawable/gra_d8_a9"/>
        <TextView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_20"
            android:text="@string/or"
            android:textColor="@color/c_A9A9A9"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_5"/>
        <View
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"
           android:layout_marginLeft="@dimen/dp_5"
            android:background="@drawable/gra_a9_d8"
            />
    </LinearLayout>
<LinearLayout
    android:id="@+id/ll_sf"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/ll_or"
    android:layout_marginTop="@dimen/dp_6"
    android:layout_centerHorizontal="true"
    >
    <ImageView
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:id="@+id/iv_qq"
        android:src="@mipmap/qq"
        />
    <ImageView
        android:id="@+id/iv_wechat"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:src="@mipmap/wechat"
       />
    <ImageView
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:id="@+id/iv_sina"
        android:layout_marginLeft="@dimen/dp_20"
        android:src="@mipmap/wobo"
        />
</LinearLayout>

<TextView
    android:id="@+id/tv_wch"
    android:layout_width="@dimen/dp_51"
    android:layout_height="@dimen/dp_17"
    android:text="@string/tv_wechat"
    android:textSize="@dimen/sp_12"
    android:textColor="@color/c_4DAE46"
    android:layout_below="@id/ll_sf"
    android:layout_marginLeft="@dimen/dp_163"
    android:layout_marginTop="@dimen/dp_9"
    />
    <TextView
        android:layout_below="@id/ll_sf"
        android:layout_width="@dimen/dp_51"
        android:layout_height="@dimen/dp_17"
        android:id="@+id/tv_qq"
        android:text="@string/tv_qq"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/c_4DAE46"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_9"/>
    <TextView
        android:layout_below="@id/ll_sf"
        android:layout_width="@dimen/dp_51"
        android:layout_height="@dimen/dp_17"
        android:layout_marginTop="@dimen/dp_9"
        android:layout_marginLeft="@dimen/dp_226"
        android:text="@string/tv_sina"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/c_4DAE46"
        />
<TextView
    android:id="@+id/tv5"
    android:layout_below="@id/tv_wch"
    android:layout_marginTop="@dimen/dp_66"
    android:layout_width="@dimen/dp_157"
    android:layout_height="@dimen/dp_18"
    android:layout_marginLeft="@dimen/dp_83"
    android:text="登录或注册即同意楼舒旅行"
    android:textSize="@dimen/sp_13"
    android:textColor="@color/c_999999"
    />
    <TextView
        android:id="@+id/tv6"
        android:layout_toRightOf="@id/tv5"
        android:layout_below="@id/tv_wch"
        android:layout_width="@dimen/dp_52"
        android:layout_height="@dimen/dp_18"
        android:text="用户协议"
        android:layout_marginTop="@dimen/dp_66"
        android:textSize="@dimen/sp_13"
        android:textColor="@color/c_FA6A13"
        />
</RelativeLayout>