<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.main.fragment.VerifyFragment"
    android:background="@color/c_FFFFFF">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_15"
    android:layout_marginTop="@dimen/dp_35">
    <ImageView
        android:id="@+id/img_back"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:src="@mipmap/back_white"/>

    <TextView
        android:layout_centerVertical="true"
        android:id="@+id/tv_send_again"
        android:layout_alignParentRight="true"
        android:text="@string/send_again"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_999999"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
    <TextView
        android:id="@+id/etv"
        android:layout_marginTop="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_23"
        android:text="@string/input_verify"
        android:textSize="@dimen/dp_27"
        android:textColor="@color/c_373737"
        android:layout_width="@dimen/dp_170"
        android:layout_height="@dimen/dp_38" />

<com.example.administrator.ecerywhere.widget.IdentifyingCodeView
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/dp_83"
    android:id="@+id/icv"
    app:icv_et_number="4"
    app:icv_et_width="@dimen/dp_44"
    app:icv_et_divider_drawable="@drawable/divider_icv"
    app:icv_et_text_color="@color/c_636363"
    app:icv_et_text_size="@dimen/sp_15"
    app:icv_et_height="@dimen/dp_56"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/dp_56"
    />

    
    <TextView
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:id="@+id/wait_please"
        android:layout_width="@dimen/dp_59"
        android:layout_height="@dimen/dp_20"
        android:text="@string/wait_please"
        android:layout_marginTop="@dimen/dp_33"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_FA6A13"
        />

</LinearLayout>